fix dark mode

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1095,9 +1095,6 @@ select{
 .-mt-px{
   margin-top: -1px;
 }
-.mr-4{
-  margin-right: 1rem;
-}
 .block{
   display: block;
 }
@@ -1853,10 +1850,6 @@ select{
   --tw-text-opacity: 1;
   color: rgb(15 23 42 / var(--tw-text-opacity));
 }
-.text-slate-800{
-  --tw-text-opacity: 1;
-  color: rgb(30 41 59 / var(--tw-text-opacity));
-}
 .text-emerald-500{
   --tw-text-opacity: 1;
   color: rgb(16 185 129 / var(--tw-text-opacity));
@@ -1868,6 +1861,10 @@ select{
 .text-blue-500{
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+.text-slate-800{
+  --tw-text-opacity: 1;
+  color: rgb(30 41 59 / var(--tw-text-opacity));
 }
 .text-slate-700{
   --tw-text-opacity: 1;
@@ -2415,11 +2412,6 @@ table tbody tr:hover{
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
-.hover\:text-purple-800:hover{
-  --tw-text-opacity: 1;
-  color: rgb(107 33 168 / var(--tw-text-opacity));
-}
-
 .focus\:z-10:focus{
   z-index: 10;
 }
@@ -2588,6 +2580,14 @@ table tbody tr:hover{
   opacity: 0.25;
 }
 
+.dark .dark\:inline{
+  display: inline;
+}
+
+.dark .dark\:hidden{
+  display: none;
+}
+
 .dark .dark\:border-gray-700{
   --tw-border-opacity: 1;
   border-color: rgb(55 65 81 / var(--tw-border-opacity));
@@ -2638,11 +2638,6 @@ table tbody tr:hover{
   color: rgb(248 113 113 / var(--tw-text-opacity));
 }
 
-.dark .dark\:text-slate-200{
-  --tw-text-opacity: 1;
-  color: rgb(226 232 240 / var(--tw-text-opacity));
-}
-
 .dark .dark\:text-black{
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
@@ -2666,11 +2661,6 @@ table tbody tr:hover{
 .dark .dark\:hover\:bg-slate-800:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(30 41 59 / var(--tw-bg-opacity));
-}
-
-.dark .dark\:hover\:text-purple-500:hover{
-  --tw-text-opacity: 1;
-  color: rgb(168 85 247 / var(--tw-text-opacity));
 }
 
 .dark .dark\:focus\:bg-slate-500:focus{
